--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/system": "^6.4.3",
     "@reduxjs/toolkit": "^2.6.0",
     "framer-motion": "^12.4.7",
+    "lucide-react": "^0.477.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
